tests/common/snapshots/lzop__common__tests__lzop.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: ~
  success: true
  extractor: lzop
  do_not_recurse: false
  output_directory: "[output_directory]"
