tests/common/snapshots/lzop__common__tests__lzop.rs-74-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 139601
  name: lzop
  confidence: 250
  description: "LZO compressed data, total size: 139601 bytes"
  always_display: false
  extraction_declined: false
