tests/common/snapshots/lzop__common__tests__lzop.rs-86-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 105911
  name: lzop
  confidence: 250
  description: "LZO compressed data, total size: 105911 bytes"
  always_display: false
  extraction_declined: false
