tests/common/snapshots/lzop__common__tests__lzop.rs-86-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 105911
  success: true
  extractor: lzop_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
